# house-temp

./: .gitignore  .gitmodules  README.md
backend/: CMakeLists.txt  main.cpp
esp/esp/: esp.ino
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/modules/: Landing.js
